[package]
name = "cargo_gn"
version = "0.0.8"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
edition = "2018"
repository = "https://github.com/denoland/cargo_gn"
readme = "README.md"
description = "Cargo integration with the GN build system"
license = "MIT"

build = "src/build.rs"

[dependencies]
which = "2.0.1"

[workspace]
members = [
  "example",
  ".",
]
