group("default") {
  deps = [
    ":foo",
    ":hello",
  ]
}

executable("foo") {
  sources = [
    "src/foo.cc",
  ]
  deps = [
    ":hello",
  ]
}

static_library("hello") {
  sources = [
    "src/hello.cc",
    "src/hello.h",
  ]
  if (is_debug) {
    defines = [ "IS_DEBUG=1" ]
  } else {
    defines = [ "IS_RELEASE=1" ]
  }
}
